@@ -1,6 +1,8 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+    New features:
+    * ->with_index
 
 0.011     2017-03-09 22:47:41+08:00 Asia/Kuala_Lumpur
     Bug fixes:
